# agent-structured-data-analysis

./: .env.example  .gitignore  README.md  config.py  main.py  purchases.csv  pyproject.toml
crew/: agents.py  tasks.py
models/: models.py
outputs/: 03-20-2024_13:46_categories.csv  03-20-2024_13:46_review.csv  03-20-2024_14:03_categories.csv  03-20-2024_14:03_review.csv  03-20-2024_14:05_categories.csv  03-20-2024_14:09_categories.csv  03-20-2024_14:09_review.csv  gemini-03-20-2024_17:05_categories.csv  mixtral-03-20-2024_16:07_categories.csv  openai-03-20-2024_14:43_categories.csv  openai-03-20-2024_15:55_categories.csv  openai-03-20-2024_16:05_categories.csv  openai-03-20-2024_17:16_categories.csv  openai-03-20-2024_17:27_categories.csv  opus-03-20-2024_17:30_categories.csv  preliminary_analysis.md  sonnet-03-20-2024_16:28_categories.csv
