[tool.poetry]
name = "purchase"
version = "0.1.0"
description = "CrewAI exercise with structured data"
authors = ["Fernando Robledo <fernando.robledoruiz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
python-dotenv = "^1.0.1"
crewai = "0.19.0"
crewai-tools = "0.0.16"
langchain-google-genai = "^0.0.11"
langchain-groq = "^0.0.1"
langchain-anthropic = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
